--- a/final/styles/index-small.css
+++ b/final/styles/index-small.css
@@ -277,6 +277,10 @@
         font-size: 2.5rem;
     }
 
+    article{
+        color: var(--chess-white);
+    }
+
     .cards {
         padding: 1rem;
     }
